[gd_scene load_steps=13 format=3 uid="uid://bnxd7cnohyqg4"]

[ext_resource type="Script" path="res://p1/fof/fof.gd" id="1_r0yxp"]
[ext_resource type="Texture2D" uid="uid://mp6ei6jsyiw0" path="res://ui/strat_ui/party_list/buffs/common_icons/prey.png" id="2_tsevi"]
[ext_resource type="Script" path="res://core/buffs/buff_data.gd" id="3_2oohq"]
[ext_resource type="Texture2D" uid="uid://d2ccenfxq8bv3" path="res://ui/strat_ui/party_list/buffs/common_icons/ruin_ddown.png" id="4_0qiq2"]
[ext_resource type="PackedScene" uid="uid://thw6548celuv" path="res://p1/tokens/thancred.tscn" id="4_ejpbr"]
[ext_resource type="Texture2D" uid="uid://cyqs48e0js1fb" path="res://ui/strat_ui/party_list/buffs/common_icons/magic_vuln.png" id="5_bp7kr"]
[ext_resource type="PackedScene" uid="uid://dwfl3kiyj4lvj" path="res://core/locators/locator.tscn" id="5_txyax"]
[ext_resource type="PackedScene" uid="uid://ch68lq3ju3lml" path="res://p1/p1_arena.tscn" id="8_abuj6"]
[ext_resource type="PackedScene" uid="uid://dik1njrfehd1s" path="res://ui/strat_ui/strat_ui.tscn" id="9_xfrip"]

[sub_resource type="Resource" id="Resource_hkluy"]
script = ExtResource("3_2oohq")
icon = ExtResource("2_tsevi")

[sub_resource type="Resource" id="Resource_m5kkb"]
script = ExtResource("3_2oohq")
icon = ExtResource("4_0qiq2")

[sub_resource type="Resource" id="Resource_f71fd"]
script = ExtResource("3_2oohq")
icon = ExtResource("5_bp7kr")

[node name="root" type="Node2D" node_paths=PackedStringArray("_thancred", "_clone_1", "_clone_2", "_clone_3", "_conga_spot_locators", "_locator_west_center", "_locator_west_out", "_locator_west_north", "_locator_west_south", "_locator_east_center", "_locator_east_out", "_locator_east_north", "_locator_east_south", "__ui", "_arena")]
script = ExtResource("1_r0yxp")
_thancred = NodePath("P1Arena/background/arena_floor/enemies/thancred")
_clone_1 = NodePath("P1Arena/background/arena_floor/enemies/clone NW")
_clone_2 = NodePath("P1Arena/background/arena_floor/enemies/clone NE")
_clone_3 = NodePath("P1Arena/background/arena_floor/enemies/clone N")
_conga_spot_locators = [NodePath("P1Arena/background/arena_floor/locators/congas/conga_1"), NodePath("P1Arena/background/arena_floor/locators/congas/conga_2"), NodePath("P1Arena/background/arena_floor/locators/congas/conga_3"), NodePath("P1Arena/background/arena_floor/locators/congas/conga_4"), NodePath("P1Arena/background/arena_floor/locators/congas/conga_5"), NodePath("P1Arena/background/arena_floor/locators/congas/conga_6"), NodePath("P1Arena/background/arena_floor/locators/congas/conga_7"), NodePath("P1Arena/background/arena_floor/locators/congas/conga_8")]
_locator_west_center = NodePath("P1Arena/background/arena_floor/locators/baits/west_center")
_locator_west_out = NodePath("P1Arena/background/arena_floor/locators/baits/west_out")
_locator_west_north = NodePath("P1Arena/background/arena_floor/locators/baits/west_north")
_locator_west_south = NodePath("P1Arena/background/arena_floor/locators/baits/west_south")
_locator_east_center = NodePath("P1Arena/background/arena_floor/locators/baits/east_center")
_locator_east_out = NodePath("P1Arena/background/arena_floor/locators/baits/east_out")
_locator_east_north = NodePath("P1Arena/background/arena_floor/locators/baits/east_north")
_locator_east_south = NodePath("P1Arena/background/arena_floor/locators/baits/east_south")
_prey_debuff = SubResource("Resource_hkluy")
_ruin_debuff = SubResource("Resource_m5kkb")
_mvuln_debuff = SubResource("Resource_f71fd")
__ui = NodePath("StratUi")
_arena = NodePath("P1Arena")

[node name="P1Arena" parent="." instance=ExtResource("8_abuj6")]

[node name="locators" type="Control" parent="P1Arena/background/arena_floor" index="0"]
layout_mode = 3
anchors_preset = 0
offset_right = 1.0
offset_bottom = 1.0

[node name="baits" type="Control" parent="P1Arena/background/arena_floor/locators"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="west_center" parent="P1Arena/background/arena_floor/locators/baits" instance=ExtResource("5_txyax")]
offset_left = -80.0
offset_right = -79.0
show_when_inactive = true

[node name="west_out" parent="P1Arena/background/arena_floor/locators/baits" instance=ExtResource("5_txyax")]
offset_left = -110.0
offset_right = -109.0
show_when_inactive = true

[node name="west_north" parent="P1Arena/background/arena_floor/locators/baits" instance=ExtResource("5_txyax")]
offset_left = -81.0
offset_top = -42.0
offset_right = -80.0
offset_bottom = -41.0
show_when_inactive = true

[node name="west_south" parent="P1Arena/background/arena_floor/locators/baits" instance=ExtResource("5_txyax")]
offset_left = -82.0
offset_top = 35.0
offset_right = -81.0
offset_bottom = 36.0
show_when_inactive = true

[node name="east_center" parent="P1Arena/background/arena_floor/locators/baits" instance=ExtResource("5_txyax")]
offset_left = 80.0
offset_right = 81.0
show_when_inactive = true

[node name="east_out" parent="P1Arena/background/arena_floor/locators/baits" instance=ExtResource("5_txyax")]
offset_left = 110.0
offset_right = 111.0
show_when_inactive = true

[node name="east_north" parent="P1Arena/background/arena_floor/locators/baits" instance=ExtResource("5_txyax")]
offset_left = 81.0
offset_top = -42.0
offset_right = 82.0
offset_bottom = -41.0
show_when_inactive = true

[node name="east_south" parent="P1Arena/background/arena_floor/locators/baits" instance=ExtResource("5_txyax")]
offset_left = 82.0
offset_top = 35.0
offset_right = 83.0
offset_bottom = 36.0
show_when_inactive = true

[node name="congas" type="Control" parent="P1Arena/background/arena_floor/locators"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="conga_1" parent="P1Arena/background/arena_floor/locators/congas" instance=ExtResource("5_txyax")]
offset_left = -140.0
offset_top = 150.0
offset_right = -139.0
offset_bottom = 151.0

[node name="conga_2" parent="P1Arena/background/arena_floor/locators/congas" instance=ExtResource("5_txyax")]
offset_left = -100.0
offset_top = 150.0
offset_right = -99.0
offset_bottom = 151.0

[node name="conga_3" parent="P1Arena/background/arena_floor/locators/congas" instance=ExtResource("5_txyax")]
offset_left = -60.0
offset_top = 150.0
offset_right = -59.0
offset_bottom = 151.0

[node name="conga_4" parent="P1Arena/background/arena_floor/locators/congas" instance=ExtResource("5_txyax")]
offset_left = -20.0
offset_top = 150.0
offset_right = -19.0
offset_bottom = 151.0

[node name="conga_5" parent="P1Arena/background/arena_floor/locators/congas" instance=ExtResource("5_txyax")]
offset_left = 20.0
offset_top = 150.0
offset_right = 21.0
offset_bottom = 151.0

[node name="conga_6" parent="P1Arena/background/arena_floor/locators/congas" instance=ExtResource("5_txyax")]
offset_left = 60.0
offset_top = 150.0
offset_right = 61.0
offset_bottom = 151.0

[node name="conga_7" parent="P1Arena/background/arena_floor/locators/congas" instance=ExtResource("5_txyax")]
offset_left = 100.0
offset_top = 150.0
offset_right = 101.0
offset_bottom = 151.0

[node name="conga_8" parent="P1Arena/background/arena_floor/locators/congas" instance=ExtResource("5_txyax")]
offset_left = 140.0
offset_top = 150.0
offset_right = 141.0
offset_bottom = 151.0

[node name="enemies" type="Node2D" parent="P1Arena/background/arena_floor" index="1"]

[node name="thancred" parent="P1Arena/background/arena_floor/enemies" instance=ExtResource("4_ejpbr")]
on_stage = true

[node name="clone NW" parent="P1Arena/background/arena_floor/enemies" instance=ExtResource("4_ejpbr")]
position = Vector2(-219, -219)
show_hitbox = false

[node name="clone NE" parent="P1Arena/background/arena_floor/enemies" instance=ExtResource("4_ejpbr")]
position = Vector2(219, -219)
show_hitbox = false

[node name="clone N" parent="P1Arena/background/arena_floor/enemies" instance=ExtResource("4_ejpbr")]
position = Vector2(0, -310)
show_hitbox = false

[node name="StratUi" parent="." instance=ExtResource("9_xfrip")]

[editable path="P1Arena"]
